--- a/Toy_Store/Views/Home/Index.cshtml
+++ b/Toy_Store/Views/Home/Index.cshtml
@@ -1,1 +1,38 @@
 ﻿@page
+
+<header>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+</header>
+<!-- Banner Section -->
+<section class="container-fluid banner d-flex align-items-center py-5">
+  <div class="row w-100 align-items-center">
+    <!-- Left content -->
+    <div class="col-md-6 text-center text-md-start px-6">
+      <h5 class="text-uppercase text-secondary">Thế giới đồ chơi – nơi ươm mầm ước mơ tuổi thơ</h5>
+      <h1 class="fw-bold display-5 text-nowrap">Chương trình khuyến mãi</h1>
+      <p class="text-muted mb-4">
+        @* Lorem ipsum dolor sit amet, consectetur adipiscing elit *@
+      </p>
+      <a href="/Products" class="btn btn-warning px-4 py-2 fw-bold">Mua ngay</a>
+      <p class="mt-3 small text-muted">
+        @* www.yourwebsite.com/furnituresale *@
+      </p>
+    </div>
+
+    <!-- Right image -->
+    <div class="col-md-6 text-center position-relative">
+      <img src="/image/Buzz_Lightyear_Render.png" alt="Buzz_Lightyear_Render" class="img-fluid sofa-img">
+      <div class="sale-badge">-25% <br> Best Seller</div>
+    </div>
+
+  
+  </div>
+
+    @* Media Icon  *@
+    <div class="IconMedia" style="position:fixed; right:20px; top:40%;">
+        <i class="bi bi-facebook"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-tiktok"></i>
+    </div>
+    
+</section>
