--- a/Toy_Store/Views/Shared/_Layout.cshtml
+++ b/Toy_Store/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
     
 
      @* landingPage *@
-  <div style="height:610px;">
+ @*  <div style="height:610px;">
           <!-- LEFT -->
       <div style="height:110px;" class="hero-left">
         <p class="title">Thế giới đồ chơi – nơi ươm mầm ước mơ tuổi thơ.</p>
@@ -75,7 +75,7 @@
         </div>
 
       </div>
-
+ *@
       <!-- RIGHT -->
      @*  <div class="hero-right">
         <div class="product-graphic" role="img" aria-label="Mô tả sản phẩm">
@@ -96,7 +96,7 @@
     <div class="container-fluid flex-grow-1">
         <div class="row">
             <!-- Sidebar -->
-            <nav class="col-md-3 col-lg-2 bg-light sidebar py-4 shadow-sm">
+         @*    <nav class="col-md-3 col-lg-2 bg-light sidebar py-4 shadow-sm">
                 <h5 class="fw-bold mb-4">Danh mục sản phẩm</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a class="nav-link text-dark" href="#">Lego</a></li>
@@ -104,7 +104,7 @@
                     <li class="nav-item mb-2"><a class="nav-link text-dark" href="#">Thú nhồi bông</a></li>
                     <li class="nav-item mb-2"><a class="nav-link text-dark" href="#">Đồ chơi giáo dục</a></li>
                 </ul>
-            </nav>
+            </nav> *@
 
             <!-- Main -->
              <main role="main" class="col-md-9 col-lg-10 px-4 py-4" style="min-height: 70vh;">
